--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,12 @@
-.App {
-  text-align: center;
+:root {
+	--primary-green: #00856f;
+	--secondary-green: #dce9e2;
+	--primary-nude: #fffaf1;
+	--primary-bg: #f7f9f9;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+	margin: 0px;
+	padding: 0px;
+	background-color: #dce9e2;
 }
