--- a/client/src/Components/patient/Appointments/Appointment.css
+++ b/client/src/Components/patient/Appointments/Appointment.css
@@ -2,8 +2,11 @@
   max-width: 1024px;
   margin: auto;
   margin-top: 20px;
+  margin-bottom: 50px;
   background-color: white;
   padding: 10px;
   border-radius: 3px;
   justify-content: center;
+  position: relative;
+  z-index: 1;
 }
