--- a/client/src/Components/patient/Helper Components/Modal.css
+++ b/client/src/Components/patient/Helper Components/Modal.css
@@ -1,80 +1,107 @@
 .modal-show {
-  padding: 100px 500px;
-  display: block;
-  margin: 200px auto 0;
-  font-size: 18px;
-  position: absolute;
-  z-index: 10;
+	padding: 100px 500px;
+	display: block;
+	margin: 200px auto 0;
+	font-size: 18px;
+	position: absolute;
+	z-index: 10;
 }
 
 .modal-hide {
-  display: none;
+	display: none;
 }
 
 body.active-modal {
-  overflow-y: hidden;
+	overflow-y: hidden;
 }
 
 .btn-modal {
-  padding: 10px 20px;
-  display: block;
-  margin: 100px auto 0;
-  font-size: 18px;
+	padding: 10px 20px;
+	display: block;
+	margin: 100px auto 0;
+	font-size: 18px;
 }
 
 .modal,
 .overlay {
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  position: fixed;
+	width: 100vw;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	position: fixed;
 }
 
 .overlay {
-  visibility: hidden;
-  opacity: 0;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.7);
-  transition: opacity 500ms;
+	visibility: hidden;
+	opacity: 0;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: rgba(0, 0, 0, 0.7);
+	transition: opacity 500ms;
 }
 .modal-content {
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  line-height: 1.5;
-  background: #f1f1f1;
-  padding: 14px 28px;
-  border-radius: 3px;
-  min-height: 190px;
-  max-height: 250px;
-  max-width: 700px;
-  min-width: 500px;
+	position: absolute;
+	top: 20%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	line-height: 1.5;
+	background: #f1f1f1;
+	padding: 14px 28px;
+	border-radius: 3px;
+	min-height: 190px;
+	max-height: 250px;
+	max-width: 700px;
+	min-width: 500px;
 }
 
 .close-modal {
-  position: absolute;
-  left: 10px;
-  top: 10px;
-  padding: 5px 7px;
+	position: absolute;
+	left: 10px;
+	top: 10px;
+	padding: 5px 7px;
 }
 
-.button-container {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  padding: 5px 7px;
+.button-container-edit {
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	padding: 5px 7px;
+}
+
+.button-container-delete {
+	position: absolute;
+	bottom: 10px;
+	right: 220px;
+	padding: 5px 7px;
 }
 
 .words-container {
-  position: absolute;
-  top: 40px;
-  left: 40px;
+	position: absolute;
+	top: 40px;
+	left: 40px;
+}
+
+.words-container > h2 {
+	padding: 0px;
+	margin: 0px;
+	margin-top: 5px;
+}
+.changing-word-div > p {
+	margin: 0px;
+	padding: 0px;
+}
+
+.grayBtn {
+	width: 200px;
+	padding: 10px;
+	border-radius: 20px;
+	border: none;
+	background-color: gray;
+	color: black;
+	cursor: pointer;
 }
