--- a/client/src/Auth/Login.css
+++ b/client/src/Auth/Login.css
@@ -97,6 +97,16 @@ c {
 
 .credentials {
 	background-color: #fff;
-    color: #495057;
+	color: #495057;
 	border: 2px;
+	border-style: solid;
+	border-color: #00856F;
+	border-radius: 8px;
+	padding: 15px 15px;
+	margin: 10px 0px;
+	width: 335px;
+	justify-content: flex-end;
+	display: flex;
+	box-shadow: 0px 4px 20px -10px #000000;
+	outline: none;
 }
