--- a/client/src/Auth/Register.css
+++ b/client/src/Auth/Register.css
@@ -21,7 +21,6 @@
 
 .Register {
 	margin-left: auto;
-	margin-right: auto;
 }
 
 b {
@@ -53,19 +52,19 @@ c {
 	margin-left: 10px;
 }
 
-.form {
+.credentials {
 	background-color: #fff;
-    color: #495057;
+	color: #495057;
 	border: 2px;
-    border-style: solid;
+	border-style: solid;
 	border-color: #00856F;
-    border-radius: 8px;
+	border-radius: 8px;
 	padding: 15px 15px;
 	margin: 10px 0px;
 	width: 335px;
-    justify-content: flex-end;
+	justify-content: flex-end;
 	display: flex;
-    box-shadow: 0px 4px 20px -10px #000000;
+	box-shadow: 0px 4px 20px -10px #000000;
 	outline: none;
 }
 
@@ -78,7 +77,7 @@ c {
     border-radius: 8px;
 	padding: 15px 15px;
 	margin: 10px 0px;
-	width: 314px;
+	width: 369px;
     justify-content: flex-end;
 	display: flex;
     box-shadow: 0px 4px 20px -10px #000000;
@@ -86,7 +85,7 @@ c {
 }
 
 .RegisterButton {
-    width: 314px;
+    width: 369px;
 	display: flex;
     justify-content: center;
 	color: #fff;
