--- a/client/src/Components/patient/SymptomChecker.css
+++ b/client/src/Components/patient/SymptomChecker.css
@@ -25,8 +25,22 @@
 	background: #00856F;
 	border: none;
 	border-radius: 8px;
-    padding: 15px 15px;
     margin: 20px 0px;
     cursor: pointer;
+}
+
+.form {
+	background-color: #fff;
+	color: #495057;
+	border: 2px;
+	border-style: solid;
+	border-color: #00856F;
+	border-radius: 8px;
+	padding: 15px 15px;
+	margin: 10px 0px;
+	width: 278px;
+	justify-content: flex-end;
+	display: flex;
+	outline: none;
 }
 
